<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp"
    >

    <ImageView
        android:id="@+id/logo_image"
        android:transitionName="logo_image"
        android:layout_width="match_parent"
        android:layout_height="191dp"
        android:padding="-20dp"
        android:paddingTop="-20dp"
        android:src="@drawable/acceuil" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:password="true"
                android:layout_height="match_parent"
                tools:ignore="Deprecated">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFF"
            android:text="@string/forget_password"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:elevation="0dp"
            android:layout_margin="10dp"
                />
        <Button
            android:id="@+id/btn_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:backgroundTint="#EB100E"
            android:layout_margin="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFF"
            android:text="@string/sign_up"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:elevation="0dp"
            android:layout_margin="10dp"
            />
    </LinearLayout>


</LinearLayout>